k8s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: "asia.gcr.io/stiens-gate/backend:${GITHUB_SHA}"
          ports:
            - containerPort: 5000
