k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    component: backend
